[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "azure-mgmt-cdn"
authors = [
    { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Microsoft Azure CDN Management Client Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
keywords = [
    "azure",
    "azure sdk",
]
dependencies = [
    "isodate>=0.6.1",
    "azure-common>=1.1",
    "azure-mgmt-core>=1.3.2",
]
dynamic = [
    "version",
    "readme",
]

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python"

[tool.azure-sdk-build]
breaking = false
mypy = false
pyright = false
type_check_samples = false
verifytypes = false

[tool.setuptools.dynamic.version]
attr = "azure.mgmt.cdn._version.VERSION"

[tool.setuptools.dynamic.readme]
file = [
    "README.md",
    "CHANGELOG.md",
]
content-type = "text/markdown"

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "azure",
    "azure.mgmt",
]

[tool.setuptools.package-data]
pytyped = [
    "py.typed",
]

[packaging]
package_name = "azure-mgmt-cdn"
package_pprint_name = "CDN Management"
package_doc_id = "cdn"
is_stable = true
sample_link = ""
title = "CdnManagementClient"
