[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "azure-ai-language-questionanswering-authoring"
authors = [
    { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Microsoft Corporation Azure Ai Language Questionanswering Authoring Client Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
keywords = [
    "azure",
    "azure sdk",
]
dependencies = [
    "isodate>=0.6.1",
    "azure-core>=1.35.0",
    "typing-extensions>=4.6.0",
    "azure-ai-language-questionanswering>=2.0.0b1",
]
dynamic = [
    "version",
    "readme",
]

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python"

[tool.setuptools.dynamic.version]
attr = "azure.ai.language.questionanswering.authoring._version.VERSION"

[tool.setuptools.dynamic.readme]
file = [
    "README.md",
    "CHANGELOG.md",
]
content-type = "text/markdown"

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "samples*",
    "doc*",
    "azure",
    "azure.ai",
    "azure.ai.language",
    "azure.ai.language.questionanswering",
]

[tool.setuptools.package-data]
pytyped = [
    "py.typed",
]

[packaging]
auto_update = false

[package]
name = "azure-ai-language-questionanswering-authoring"
display_name = "Azure AI Language Question Answering Authoring"
description = "Authoring client for Azure AI Language Question Answering (preview)."
keywords = [
    "azure",
    "cognitive services",
    "language",
    "question answering",
    "authoring",
]
license = "MIT"
repository_url = "https://github.com/Azure/azure-sdk-for-python"
version = "1.0.0b1"
python_min = "3.9"

[package.readme]
path = "README.md"

[package.changelog]
path = "CHANGELOG.md"

[package.namespace]
name = "azure.ai.language.questionanswering.authoring"

[dependencies]
azure-core = ">=1.28.0"
isodate = ">=0.6.1"
typing-extensions = ">=4.0.1; python_version<'3.11'"

[dev-dependencies]
azure-identity = ">=1.15.0"
pytest = "*"

[build]
artifacts = [
    "sdist",
    "wheel",
]

[metadata]
service_name = "cognitivelanguage"
