# --------------------------------------------------------------------------
# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License. See License.txt in the project root for license information.
# --------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-communication-messages"
authors = [
  { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Microsoft Communication Messages Client Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
keywords = [
    "azure",
    "azure sdk",
]
version = "1.2.0b1"
dependencies = [
    "isodate>=0.6.1",
    "azure-core>=1.30.0",
    "typing-extensions>=4.6.0",
]
dynamic = ["readme"]

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python/tree/main/sdk"

[tool.setuptools.dynamic]
readme = {file = [
    "README.md",
    "CHANGELOG.md",
], content-type = "text/markdown"}

[tool.setuptools.package-data]
pytyped = ["py.typed"]

[tool.setuptools.packages.find]
exclude = [
    "azure",
    "azure.communication",
    "tests",
]

[tool.azure-sdk-build]
pyright = false

[tool.azure-sdk-conda]
in_bundle = true
bundle_name = "azure-communication"
