[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "azure-communication-phonenumbers"
authors = [
    { name = "Microsoft Corporation", email = "azuresdkengsysadmins@microsoft.com" },
]
description = "Microsoft Azure Communication Phone Numbers Client Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
keywords = [
    "azure",
    "azure sdk",
]
dependencies = [
    "isodate>=0.6.1",
    "azure-core>=1.30.0",
    "typing-extensions>=4.6.0",
]
dynamic = [
    "version",
    "readme",
]

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python"

[tool.azure-sdk-build]
pyright = false

[tool.azure-sdk-conda]
in_bundle = true
bundle_name = "azure-communication"

[tool.setuptools.dynamic.version]
attr = "azure.communication.phonenumbers._version.VERSION"

[tool.setuptools.dynamic.readme]
file = [
    "README.md",
]
content-type = "text/markdown"

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "azure",
    "azure.communication",
]

[tool.setuptools.package-data]
pytyped = [
    "py.typed",
]

[packaging]
auto_update = false
package_name = "azure-communication-phonenumbers"
package_pprint_name = "Communication Phone Numbers"
package_doc_id = ""
is_stable = false
is_arm = false
