[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "azure-communication-rooms"
authors = [
    { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Microsoft Communication Rooms Client Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
keywords = [
    "azure",
    "azure sdk",
]
dependencies = [
    "azure-core>=1.32.0",
    "isodate>=0.6.1",
    "typing-extensions>=4.6.0",
]
dynamic = [
    "version",
    "readme",
]

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python/tree/main/sdk/communication/azure-communication-rooms"

[tool.azure-sdk-build]
pyright = false

[tool.azure-sdk-conda]
in_bundle = true
bundle_name = "azure-communication"

[tool.setuptools.dynamic.version]
attr = "azure.communication.rooms._version.VERSION"

[tool.setuptools.dynamic.readme]
file = [
    "README.md",
]
content-type = "text/markdown"

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "azure",
    "azure.communication",
]

[packaging]
package_name = "azure-communication-rooms"
package_pprint_name = "Azure Communication Rooms"
package_doc_id = ""
is_stable = false
is_arm = false
auto_update = false
