[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "azure-confidentialledger"
authors = [
    { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Microsoft Corporation Azure Confidential Ledger Client Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
keywords = [
    "azure",
    "azure sdk",
]
dependencies = [
    "isodate>=0.6.1",
    "azure-core>=1.35.0",
    "typing-extensions>=4.6.0",
    "cryptography>=2.1.4",
    "azure-confidentialledger-certificate>=1.0.0b1",
]
dynamic = [
    "version",
    "readme",
]

[project.urls]
Homepage = "https://github.com/Azure/azure-sdk-for-python"
"Bug Reports" = "https://github.com/Azure/azure-sdk-for-python/issues"
Source = "https://github.com/Azure/azure-sdk-for-python"

[tool.setuptools.dynamic.version]
attr = "azure.confidentialledger._version.VERSION"

[tool.setuptools.dynamic.readme]
file = [
    "README.md",
    "CHANGELOG.md",
]
content-type = "text/markdown"

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "samples*",
    "doc*",
    "azure",
]

[tool.setuptools.package-data]
pytyped = [
    "py.typed",
]

[tool.azure-sdk-build]
pyright = false

[tool.azure-sdk-conda]
in_bundle = false

[packaging]
package_name = "azure-confidentialledger"
package_pprint_name = "Azure Confidential Ledger"
package_doc_id = ""
is_stable = false
is_arm = false
need_msrestazure = false
auto_update = false
